--- a/Manifests/ManagedPreferencesApplications/com.okta.mobile.auth-service-extension.plist
+++ b/Manifests/ManagedPreferencesApplications/com.okta.mobile.auth-service-extension.plist
@@ -307,6 +307,20 @@ If the value contains 'Disabled', the Device Health page isn't displayed in Okta
 			<key>pfm_type</key>
 			<string>string</string>
 		</dict>
+		<dict>
+			<key>pfm_description</key>
+			<string>Automatically populates the username in the Sign-In Widget</string>
+			<key>pfm_documentation_url</key>
+			<string>https://help.okta.com/oie/en-us/content/topics/oda/macos-pw-sync/configure-macos-password-sync-policies.htm</string>
+			<key>pfm_name</key>
+			<string>OktaVerify.UserPrincipalName</string>
+			<key>pfm_title</key>
+			<string>Okta User Principle Name</string>
+			<key>pfm_type</key>
+			<string>string</string>
+			<key>pfm_value_placeholder</key>
+			<string>username@domain.com</string>
+		</dict>
 	</array>
 	<key>pfm_targets</key>
 	<array>
