--- a/Manifests/ManagedPreferencesApplications/com.okta.mobile.plist
+++ b/Manifests/ManagedPreferencesApplications/com.okta.mobile.plist
@@ -65,7 +65,7 @@
 	ChiYvHgSithnzR++s9bEkCFDhgwZMuR8+TcgDLDRAr0H4wAAAABJRU5ErkJggg==
 	</data>
 	<key>pfm_last_modified</key>
-	<date>2024-12-26T02:38:09Z</date>
+	<date>2025-02-16T02:52:57Z</date>
 	<key>pfm_platforms</key>
 	<array>
 		<string>macOS</string>
@@ -265,7 +265,7 @@ If the value contains 'Disabled', the Device Health page isn't displayed in Okta
 		</dict>
 		<dict>
 			<key>pfm_description</key>
-			<string>Pre-populate the username</string>
+			<string>Automatically populates the username in the Sign-In Widget</string>
 			<key>pfm_documentation_url</key>
 			<string>https://help.okta.com/oie/en-us/content/topics/oda/macos-pw-sync/configure-macos-password-sync-policies.htm</string>
 			<key>pfm_name</key>
