--- a/Manifests/ManagedPreferencesApple/com.apple.safari.plist
+++ b/Manifests/ManagedPreferencesApple/com.apple.safari.plist
@@ -13,7 +13,7 @@
 	<key>pfm_format_version</key>
 	<integer>1</integer>
 	<key>pfm_last_modified</key>
-	<date>2023-08-15T08:00:00Z</date>
+	<date>2025-02-20T05:12:09Z</date>
 	<key>pfm_platforms</key>
 	<array>
 		<string>macOS</string>
@@ -157,6 +157,7 @@ During a profile replacement, the system updates payloads with the same 'Payload
 					<string>DefaultDatabaseQuota</string>
 					<string>IncludeDevelopMenu</string>
 					<string>PrintHeadersAndFooters</string>
+					<string>ShowFullURLInSmartSearchField</string>
 					<string>com.apple.Safari.ContentPageGroupIdentifier.WebKit2DefaultFixedFontSize</string>
 					<string>com.apple.Safari.ContentPageGroupIdentifier.WebKit2FixedFontFamily</string>
 					<string>com.apple.Safari.ContentPageGroupIdentifier.WebKit2DefaultFontSize</string>
@@ -202,6 +203,7 @@ During a profile replacement, the system updates payloads with the same 'Payload
 					<string>NewWindowBehavior</string>
 					<string>NewTabBehavior</string>
 					<string>OpenNewTabsInFront</string>
+					<string>ShowOverlayStatusBar</string>
 					<string>TabCreationPolicy</string>
 				</array>
 				<key>Notifications</key>
@@ -217,6 +219,7 @@ During a profile replacement, the system updates payloads with the same 'Payload
 				<key>Security</key>
 				<array>
 					<string>AskBeforeSubmittingInsecureForms</string>
+					<string>WarnAboutFraudulentWebsites</string>
 					<string>com.apple.Safari.ContentPageGroupIdentifier.WebKit2JavaEnabled</string>
 					<string>com.apple.Safari.ContentPageGroupIdentifier.WebKit2JavaScriptCanOpenWindowsAutomatically</string>
 					<string>com.apple.Safari.ContentPageGroupIdentifier.WebKit2JavaScriptEnabled</string>
@@ -445,6 +448,54 @@ During a profile replacement, the system updates payloads with the same 'Payload
 			<string>AutoOpenSafeDownloads</string>
 			<key>pfm_title</key>
 			<string>Open Safe Downloads Automatically</string>
+			<key>pfm_type</key>
+			<string>boolean</string>
+		</dict>
+		<dict>
+			<key>pfm_default</key>
+			<false/>
+			<key>pfm_description</key>
+			<string>Controls whether mousing over a link displays the full URL that the link will follow</string>
+			<key>pfm_documentation_url</key>
+			<string>https://www.tenable.com/audits/items/CIS_MacOS_Safari_Benchmark_v2.0.0_L1.audit:c75b2abc30f5dce21100b31cc4d4d8a3</string>
+			<key>pfm_macos_min</key>
+			<string>15.0</string>
+			<key>pfm_name</key>
+			<string>ShowOverlayStatusBar</string>
+			<key>pfm_title</key>
+			<string>Show Status Bar</string>
+			<key>pfm_type</key>
+			<string>boolean</string>
+		</dict>
+		<dict>
+			<key>pfm_default</key>
+			<false/>
+			<key>pfm_description</key>
+			<string>Full URL Path is Shown in Search Bar</string>
+			<key>pfm_documentation_url</key>
+			<string>https://www.tenable.com/audits/items/CIS_MacOS_Safari_Benchmark_v2.0.0_L1.audit:2e00db7777604dd2a0cb9b462f668da3</string>
+			<key>pfm_macos_min</key>
+			<string>15.0</string>
+			<key>pfm_name</key>
+			<string>ShowFullURLInSmartSearchField</string>
+			<key>pfm_title</key>
+			<string>Show Full Website Address</string>
+			<key>pfm_type</key>
+			<string>boolean</string>
+		</dict>
+		<dict>
+			<key>pfm_default</key>
+			<false/>
+			<key>pfm_description</key>
+			<string>Alert the user that the site they are visiting is known to be malicious</string>
+			<key>pfm_documentation_url</key>
+			<string>https://www.tenable.com/audits/items/CIS_MacOS_Safari_Benchmark_v2.0.0_L1.audit:37f26137d5f0bda38c403263dc1279dc</string>
+			<key>pfm_macos_min</key>
+			<string>15.0</string>
+			<key>pfm_name</key>
+			<string>WarnAboutFraudulentWebsites</string>
+			<key>pfm_title</key>
+			<string>Warn about Fraudulent Website</string>
 			<key>pfm_type</key>
 			<string>boolean</string>
 		</dict>
@@ -1001,6 +1052,6 @@ During a profile replacement, the system updates payloads with the same 'Payload
 	<key>pfm_unique</key>
 	<true/>
 	<key>pfm_version</key>
-	<integer>10</integer>
+	<integer>11</integer>
 </dict>
 </plist>
