--- a/Manifests/ManagedPreferencesApplications/com.northpolesec.santa.plist
+++ b/Manifests/ManagedPreferencesApplications/com.northpolesec.santa.plist
@@ -223,18 +223,20 @@ During a profile replacement, the system updates payloads with the same 'Payload
 			<key>pfm_description</key>
 			<string></string>
 			<key>pfm_description_reference</key>
-			<string>1 = MONITOR, 2 = LOCKDOWN, defaults to MONITOR</string>
+			<string>1 = MONITOR, 2 = LOCKDOWN, 3 = STANDALONE defaults to MONITOR</string>
 			<key>pfm_name</key>
 			<string>ClientMode</string>
 			<key>pfm_range_list</key>
 			<array>
 				<integer>1</integer>
 				<integer>2</integer>
+				<integer>3</integer>
 			</array>
 			<key>pfm_range_list_titles</key>
 			<array>
 				<string>Monitor</string>
 				<string>Lockdown</string>
+				<string>Standalone</string>
 			</array>
 			<key>pfm_title</key>
 			<string>Client Mode</string>
