--- a/Manifests/ManagedPreferencesApplications/com.northpolesec.santa.plist
+++ b/Manifests/ManagedPreferencesApplications/com.northpolesec.santa.plist
@@ -212,6 +212,9 @@ During a profile replacement, the system updates payloads with the same 'Payload
 					<string>EnableAllEventUpload</string>
 					<string>DisableUnknownEventUpload</string>
 					<string>BlockUSBMount</string>
+					<string>SyncClientContentEncoding</string>
+					<string>SyncEnableProtoTransfer</string>
+					<string>SyncExtraHeaders</string>
 				</array>
 			</dict>
 			<key>pfm_type</key>
@@ -472,6 +475,51 @@ During a profile replacement, the system updates payloads with the same 'Payload
 			<string>https://sync-server-hostname/moreinfo</string>
 		</dict>
 		<dict>
+			<key>pfm_default</key>
+			<string>deflate</string>
+			<key>pfm_description</key>
+			<string>Sets the Content-Encoding header for requests sent to the sync service.</string>
+			<key>pfm_name</key>
+			<string>SyncClientContentEncoding</string>
+			<key>pfm_range_list</key>
+			<array>
+				<string>deflate</string>
+				<string>gzip</string>
+				<string>none</string>
+			</array>
+			<key>pfm_range_list_titles</key>
+			<array>
+				<string>Deflate</string>
+				<string>GZip</string>
+				<string>None</string>
+			</array>
+			<key>pfm_title</key>
+			<string>Sync Client Content Encoding</string>
+			<key>pfm_type</key>
+			<string>string</string>
+		</dict>
+		<dict>
+			<key>pfm_description</key>
+			<string>Dictionary of additional headers to include in all requests made to the sync server</string>
+			<key>pfm_name</key>
+			<string>SyncExtraHeaders</string>
+			<key>pfm_subkeys</key>
+			<array>
+				<dict>
+					<key>pfm_name</key>
+					<string>X-API-Key</string>
+					<key>pfm_title</key>
+					<string>X-API-Key (SyncExtraHeaders)</string>
+					<key>pfm_type</key>
+					<string>string</string>
+				</dict>
+			</array>
+			<key>pfm_title</key>
+			<string>Sync Extra Headers</string>
+			<key>pfm_type</key>
+			<string>dictionary</string>
+		</dict>
+		<dict>
 			<key>pfm_description</key>
 			<string>The URL to open when the user gets a block notification. If unset, the button will not be displayed. Can include the following variables for substitution:
 %file_identifier% - SHA-256 of the file that was blocked
@@ -629,6 +677,18 @@ For example: https://sync-server-hostname/%machine_id%/%file_sha%</string>
 			<string>SyncEnableCleanSyncEventUpload</string>
 			<key>pfm_title</key>
 			<string>Enable Upload Clean Syncs</string>
+			<key>pfm_type</key>
+			<string>boolean</string>
+		</dict>
+		<dict>
+			<key>pfm_default</key>
+			<false/>
+			<key>pfm_description</key>
+			<string>If true, sync will happen using binary protos instead of JSON</string>
+			<key>pfm_name</key>
+			<string>SyncEnableProtoTransfer</string>
+			<key>pfm_title</key>
+			<string>Sync Proto Transfer</string>
 			<key>pfm_type</key>
 			<string>boolean</string>
 		</dict>
