--- a/Manifests/ManagedPreferencesApplications/com.northpolesec.santa.plist
+++ b/Manifests/ManagedPreferencesApplications/com.northpolesec.santa.plist
@@ -192,6 +192,7 @@ During a profile replacement, the system updates payloads with the same 'Payload
 					<string>MetricExportInterval</string>
 					<string>MetricExportTimeout</string>
 					<string>MetricExtraLabels</string>
+					<string>Telemetry</string>
 				</array>
 				<key>Sync Server</key>
 				<array>
@@ -518,6 +519,48 @@ During a profile replacement, the system updates payloads with the same 'Payload
 			<string>Sync Extra Headers</string>
 			<key>pfm_type</key>
 			<string>dictionary</string>
+		</dict>
+		<dict>
+			<key>pfm_default</key>
+			<string>Everything</string>
+			<key>pfm_description</key>
+			<string>Array of strings for events that should be logged</string>
+			<key>pfm_name</key>
+			<string>Telemetry</string>
+			<key>pfm_subkeys</key>
+			<array>
+				<dict>
+					<key>pfm_range_list</key>
+					<array>
+						<string>Everything</string>
+						<string>Execution</string>
+						<string>Fork</string>
+						<string>Exit</string>
+						<string>Close</string>
+						<string>Rename</string>
+						<string>Unlink</string>
+						<string>Link</string>
+						<string>ExchangeData</string>
+						<string>Disk</string>
+						<string>Bundle</string>
+						<string>Allowlist</string>
+						<string>FileAccess</string>
+						<string>CodesigningInvalidated</string>
+						<string>LoginWindowSession</string>
+						<string>LoginLogout</string>
+						<string>ScreenSharing</string>
+						<string>OpenSSH</string>
+						<string>Authentication</string>
+						<string>None</string>
+					</array>
+					<key>pfm_type</key>
+					<string>string</string>
+					<key>pfm_value_unique</key>
+					<true/>
+				</dict>
+			</array>
+			<key>pfm_type</key>
+			<string>array</string>
 		</dict>
 		<dict>
 			<key>pfm_description</key>
