--- a/Manifests/ManagedPreferencesApplications/com.northpolesec.santa.plist
+++ b/Manifests/ManagedPreferencesApplications/com.northpolesec.santa.plist
@@ -188,6 +188,8 @@ During a profile replacement, the system updates payloads with the same 'Payload
 					<string>EnableBadSignatureProtection</string>
 					<string>EnablePageZeroProtection</string>
 					<string>EnableSysxCache</string>
+					<string>EntitlementsPrefixFilter</string>
+					<string>EntitlementsTeamIDFilter</string>
 				</array>
 				<key>Metrics</key>
 				<array>
@@ -1347,6 +1349,46 @@ For example: https://sync-server-hostname/%machine_id%/%file_sha%</string>
 			<string>integer</string>
 			<key>pfm_value_unit</key>
 			<string>seconds</string>
+		</dict>
+		<dict>
+			<key>pfm_description</key>
+			<string>Array of strings of entitlement prefixes that should not be logged</string>
+			<key>pfm_name</key>
+			<string>EntitlementsPrefixFilter</string>
+			<key>pfm_subkeys</key>
+			<array>
+				<dict>
+					<key>pfm_title</key>
+					<string>Entitlement Prefix Filters</string>
+					<key>pfm_type</key>
+					<string>string</string>
+					<key>pfm_value_placeholder</key>
+					<string>com.apple.private</string>
+				</dict>
+			</array>
+			<key>pfm_type</key>
+			<string>array</string>
+		</dict>
+		<dict>
+			<key>pfm_description</key>
+			<string>Array of TeamIDs</string>
+			<key>pfm_name</key>
+			<string>EntitlementsTeamIDFilter</string>
+			<key>pfm_note</key>
+			<string>Entitlements from processes with a matching TeamID in the code signature will not be logged. Use the value "platform" to filter entitlements from platform binaries</string>
+			<key>pfm_subkeys</key>
+			<array>
+				<dict>
+					<key>pfm_title</key>
+					<string>Entitlements TeamIDs</string>
+					<key>pfm_type</key>
+					<string>string</string>
+					<key>pfm_value_placeholder</key>
+					<string>platform</string>
+				</dict>
+			</array>
+			<key>pfm_type</key>
+			<string>array</string>
 		</dict>
 	</array>
 	<key>pfm_targets</key>
