--- a/Manifests/ManagedPreferencesApplications/com.northpolesec.santa.plist
+++ b/Manifests/ManagedPreferencesApplications/com.northpolesec.santa.plist
@@ -527,12 +527,12 @@ During a profile replacement, the system updates payloads with the same 'Payload
 			<string>dictionary</string>
 		</dict>
 		<dict>
-			<key>pfm_default</key>
-			<string>Everything</string>
 			<key>pfm_description</key>
 			<string>Array of strings for events that should be logged</string>
 			<key>pfm_name</key>
 			<string>Telemetry</string>
+			<key>pfm_note</key>
+			<string>If not specified, defaults to Everything</string>
 			<key>pfm_subkeys</key>
 			<array>
 				<dict>
