--- a/Manifests/ManagedPreferencesApple/com.apple.safari.plist
+++ b/Manifests/ManagedPreferencesApple/com.apple.safari.plist
@@ -215,6 +215,9 @@ During a profile replacement, the system updates payloads with the same 'Payload
 					<string>BlockStoragePolicy</string>
 					<string>SendDoNotTrackHTTPHeader</string>
 					<string>com.apple.Safari.ContentPageGroupIdentifier.WebKit2PrivateBrowsingEnabled</string>
+					<string>WebKitPreferences.privateClickMeasurementEnabled</string>
+					<string>WebKitPreferences.storageBlockingPolicy</string>
+					<string>WebKitStorageBlockingPolicy</string>
 				</array>
 				<key>Security</key>
 				<array>
@@ -498,6 +501,52 @@ During a profile replacement, the system updates payloads with the same 'Payload
 			<string>Warn about Fraudulent Websites</string>
 			<key>pfm_type</key>
 			<string>boolean</string>
+		</dict>
+		<dict>
+			<key>pfm_default</key>
+			<false/>
+			<key>pfm_description</key>
+			<string>Manage advertising settings</string>
+			<key>pfm_documentation_url</key>
+			<string>https://www.tenable.com/audits/items/CIS_Apple_macOS_13.0_Ventura_v3.0.0_L1.audit:9ba72640dddb6f0f8cccba555ef23517</string>
+			<key>pfm_name</key>
+			<string>WebKitPreferences.privateClickMeasurementEnabled</string>
+			<key>pfm_title</key>
+			<string>Advertising Privacy Protection</string>
+			<key>pfm_type</key>
+			<string>boolean</string>
+		</dict>
+		<dict>
+			<key>pfm_description</key>
+			<string>Manage cross-site tracking and resistance from data brokers</string>
+			<key>pfm_documentation_url</key>
+			<string>https://www.tenable.com/audits/items/CIS_Apple_macOS_12.0_Monterey_v4.0.0_L1.audit:a8c4cacd799fdac0038421f89b0d1c6e</string>
+			<key>pfm_name</key>
+			<string>WebKitPreferences.storageBlockingPolicy</string>
+			<key>pfm_range_list</key>
+			<array>
+				<integer>1</integer>
+			</array>
+			<key>pfm_title</key>
+			<string>Prevent Cross-Site Tracking (WebKitPreferences)</string>
+			<key>pfm_type</key>
+			<string>integer</string>
+		</dict>
+		<dict>
+			<key>pfm_description</key>
+			<string>Manage cross-site tracking and resistance from data brokers</string>
+			<key>pfm_documentation_url</key>
+			<string>https://www.tenable.com/audits/items/CIS_Apple_macOS_12.0_Monterey_v4.0.0_L1.audit:a8c4cacd799fdac0038421f89b0d1c6e</string>
+			<key>pfm_name</key>
+			<string>WebKitStorageBlockingPolicy</string>
+			<key>pfm_range_list</key>
+			<array>
+				<integer>1</integer>
+			</array>
+			<key>pfm_title</key>
+			<string>Prevent Cross-Site Tracking</string>
+			<key>pfm_type</key>
+			<string>integer</string>
 		</dict>
 		<dict>
 			<key>pfm_default</key>
