--- a/Manifests/ManifestsApple/com.apple.eas.account.plist
+++ b/Manifests/ManifestsApple/com.apple.eas.account.plist
@@ -403,6 +403,11 @@ Available only in iOS 12.0 and above.</string>
 					<key>pfmx_introduced</key>
 					<string>5.0</string>
 				</dict>
+				<key>visionOS</key>
+				<dict>
+					<key>pfmx_introduced</key>
+					<string>n/a</string>
+				</dict>
 			</dict>
 		</dict>
 		<dict>
@@ -473,6 +478,11 @@ Available only in iOS 12.0 and above.</string>
 					<key>pfmx_introduced</key>
 					<string>10.3</string>
 				</dict>
+				<key>visionOS</key>
+				<dict>
+					<key>pfmx_introduced</key>
+					<string>n/a</string>
+				</dict>
 			</dict>
 		</dict>
 		<dict>
@@ -537,6 +547,11 @@ Available in iOS 8.0 and later. As of iOS 12.0, this key is deprecated. Use 'SMI
 					<string>12.0</string>
 					<key>pfmx_introduced</key>
 					<string>8.0</string>
+				</dict>
+				<key>visionOS</key>
+				<dict>
+					<key>pfmx_introduced</key>
+					<string>n/a</string>
 				</dict>
 			</dict>
 		</dict>
@@ -898,6 +913,14 @@ At least of the following fields needs to be 'true': 'EnableMail', 'EnableContac
 			<string>Account Modification - Reminders</string>
 			<key>pfm_type</key>
 			<string>boolean</string>
+			<key>pfmx_supported_oses</key>
+			<dict>
+				<key>iOS</key>
+				<dict>
+					<key>pfmx_introduced</key>
+					<string>13.0</string>
+				</dict>
+			</dict>
 		</dict>
 		<dict>
 			<key>pfm_default</key>
@@ -1019,6 +1042,14 @@ For no limit, use the value '0'.</string>
 			<string>VPNUUID</string>
 			<key>pfm_type</key>
 			<string>string</string>
+			<key>pfmx_supported_oses</key>
+			<dict>
+				<key>iOS</key>
+				<dict>
+					<key>pfmx_introduced</key>
+					<string>14.0</string>
+				</dict>
+			</dict>
 		</dict>
 		<dict>
 			<key>pfm_description</key>
@@ -1029,6 +1060,19 @@ For no limit, use the value '0'.</string>
 			<string>HeaderMagic</string>
 			<key>pfm_type</key>
 			<string>string</string>
+			<key>pfmx_supported_oses</key>
+			<dict>
+				<key>iOS</key>
+				<dict>
+					<key>pfmx_deprecated</key>
+					<string>7.0</string>
+				</dict>
+				<key>visionOS</key>
+				<dict>
+					<key>pfmx_introduced</key>
+					<string>n/a</string>
+				</dict>
+			</dict>
 		</dict>
 		<dict>
 			<key>pfm_default</key>
@@ -1043,6 +1087,14 @@ For no limit, use the value '0'.</string>
 			<string>Allow Mail Drop</string>
 			<key>pfm_type</key>
 			<string>boolean</string>
+			<key>pfmx_supported_oses</key>
+			<dict>
+				<key>iOS</key>
+				<dict>
+					<key>pfmx_introduced</key>
+					<string>9.2</string>
+				</dict>
+			</dict>
 		</dict>
 		<dict>
 			<key>pfm_description</key>
@@ -1053,6 +1105,14 @@ For no limit, use the value '0'.</string>
 			<string>OAuthSignInURL</string>
 			<key>pfm_type</key>
 			<string>string</string>
+			<key>pfmx_supported_oses</key>
+			<dict>
+				<key>iOS</key>
+				<dict>
+					<key>pfmx_introduced</key>
+					<string>13.0</string>
+				</dict>
+			</dict>
 		</dict>
 		<dict>
 			<key>pfm_description</key>
@@ -1068,7 +1128,7 @@ For no limit, use the value '0'.</string>
 				<key>iOS</key>
 				<dict>
 					<key>pfmx_introduced</key>
-					<string>14.0</string>
+					<string>13.0</string>
 				</dict>
 			</dict>
 		</dict>
@@ -1103,6 +1163,22 @@ For no limit, use the value '0'.</string>
 				<key>pfmx_user_channel</key>
 				<true/>
 			</dict>
+			<key>pfmx_supervised</key>
+			<false/>
+			<key>pfmx_user_enrollment</key>
+			<dict>
+				<key>pfmx_mode</key>
+				<string>allowed</string>
+			</dict>
+		</dict>
+		<key>visionOS</key>
+		<dict>
+			<key>pfmx_allow_manual_install</key>
+			<true/>
+			<key>pfmx_introduced</key>
+			<string>1.1</string>
+			<key>pfmx_multiple</key>
+			<true/>
 			<key>pfmx_supervised</key>
 			<false/>
 			<key>pfmx_user_enrollment</key>
