--- a/Manifests/ManifestsApple/com.apple.configurationprofile.identification.plist
+++ b/Manifests/ManifestsApple/com.apple.configurationprofile.identification.plist
@@ -310,6 +310,8 @@ During a profile replacement, the system updates payloads with the same 'Payload
 		<dict>
 			<key>pfmx_allow_manual_install</key>
 			<true/>
+			<key>pfmx_deprecated</key>
+			<string>15.4</string>
 			<key>pfmx_device_channel</key>
 			<true/>
 			<key>pfmx_introduced</key>
