--- a/Manifests/ManifestsApple/com.apple.extensiblesso.plist
+++ b/Manifests/ManifestsApple/com.apple.extensiblesso.plist
@@ -3130,6 +3130,14 @@ kerberosDefault - The default Kerberos processes for selecting credentials is us
 					<string>AllowDeviceIdentifiersInAttestation</string>
 					<key>pfm_type</key>
 					<string>boolean</string>
+					<key>pfmx_supported_oses</key>
+					<dict>
+						<key>macOS</key>
+						<dict>
+							<key>pfmx_introduced</key>
+							<string>15.4</string>
+						</dict>
+					</dict>
 				</dict>
 			</array>
 			<key>pfm_type</key>
