--- a/Manifests/ManifestsApple/com.apple.configurationprofile.identification.plist
+++ b/Manifests/ManifestsApple/com.apple.configurationprofile.identification.plist
@@ -11,11 +11,11 @@ The Identification payload is not supported in iOS.</string>
 	<key>pfm_domain</key>
 	<string>com.apple.configurationprofile.identification</string>
 	<key>pfm_format_version</key>
-	<real>1</real>
+	<integer>1</integer>
 	<key>pfm_interaction</key>
 	<string>exclusive</string>
 	<key>pfm_last_modified</key>
-	<date>2025-03-03T11:08:08Z</date>
+	<date>2025-03-15T16:11:44Z</date>
 	<key>pfm_macos_deprecated</key>
 	<string>15.4</string>
 	<key>pfm_macos_min</key>
