--- a/Manifests/ManifestsApple/com.apple.cellular.plist
+++ b/Manifests/ManifestsApple/com.apple.cellular.plist
@@ -202,6 +202,14 @@ During a profile replacement, the system updates payloads with the same 'Payload
 							<string>Data APN proxy server</string>
 							<key>pfm_type</key>
 							<string>string</string>
+							<key>pfmx_supported_oses</key>
+							<dict>
+								<key>macOS</key>
+								<dict>
+									<key>pfmx_introduced</key>
+									<string>n/a</string>
+								</dict>
+							</dict>
 						</dict>
 						<dict>
 							<key>pfm_description</key>
@@ -241,6 +249,16 @@ During a profile replacement, the system updates payloads with the same 'Payload
 							<string>Data APN default IP versions</string>
 							<key>pfm_type</key>
 							<string>integer</string>
+							<key>pfmx_supported_oses</key>
+							<dict>
+								<key>iOS</key>
+								<dict>
+									<key>pfmx_deprecated</key>
+									<string>11.0</string>
+									<key>pfmx_introduced</key>
+									<string>10.3</string>
+								</dict>
+							</dict>
 						</dict>
 						<dict>
 							<key>pfm_description</key>
@@ -268,6 +286,14 @@ During a profile replacement, the system updates payloads with the same 'Payload
 							<string>Data APN supported IP versions</string>
 							<key>pfm_type</key>
 							<string>integer</string>
+							<key>pfmx_supported_oses</key>
+							<dict>
+								<key>iOS</key>
+								<dict>
+									<key>pfmx_introduced</key>
+									<string>10.3</string>
+								</dict>
+							</dict>
 						</dict>
 						<dict>
 							<key>pfm_description</key>
@@ -295,6 +321,14 @@ During a profile replacement, the system updates payloads with the same 'Payload
 							<string>Data APN supported roaming IP versions</string>
 							<key>pfm_type</key>
 							<string>integer</string>
+							<key>pfmx_supported_oses</key>
+							<dict>
+								<key>iOS</key>
+								<dict>
+									<key>pfmx_introduced</key>
+									<string>10.3</string>
+								</dict>
+							</dict>
 						</dict>
 						<dict>
 							<key>pfm_description</key>
@@ -322,6 +356,14 @@ During a profile replacement, the system updates payloads with the same 'Payload
 							<string>Data APN supported domestic roaming IP versions</string>
 							<key>pfm_type</key>
 							<string>integer</string>
+							<key>pfmx_supported_oses</key>
+							<dict>
+								<key>iOS</key>
+								<dict>
+									<key>pfmx_introduced</key>
+									<string>10.3</string>
+								</dict>
+							</dict>
 						</dict>
 						<dict>
 							<key>pfm_default</key>
@@ -336,6 +378,19 @@ During a profile replacement, the system updates payloads with the same 'Payload
 							<string>Enable 464XLAT IPv6 and IPv4 Interoperability</string>
 							<key>pfm_type</key>
 							<string>boolean</string>
+							<key>pfmx_supported_oses</key>
+							<dict>
+								<key>iOS</key>
+								<dict>
+									<key>pfmx_introduced</key>
+									<string>16.0</string>
+								</dict>
+								<key>watchOS</key>
+								<dict>
+									<key>pfmx_introduced</key>
+									<string>9.0</string>
+								</dict>
+							</dict>
 						</dict>
 					</array>
 					<key>pfm_type</key>
