--- a/Manifests/ManifestsApple/com.apple.vpn.managed.plist
+++ b/Manifests/ManifestsApple/com.apple.vpn.managed.plist
@@ -761,7 +761,7 @@ Not available in watchOS.</string>
 			<string>dictionary</string>
 			<key>pfmx_supported_oses</key>
 			<dict>
-				<key>watchOS</key>
+				<key>tvOS</key>
 				<dict>
 					<key>pfmx_introduced</key>
 					<string>n/a</string>
@@ -7711,6 +7711,8 @@ Available in iOS 14.2 and later, and macOS 11 and later. Not available in watchO
 			<key>pfmx_multiple</key>
 			<true/>
 			<key>pfmx_requires_dep</key>
+			<false/>
+			<key>pfmx_supervised</key>
 			<false/>
 			<key>pfmx_user_approved_mdm</key>
 			<false/>
